testsuite/bsc.interra/messages/EResources/EResources.bs.bsc-vcomp-out.expected
checking package dependencies
compiling EResources.bs
code generation for subtractor starts
Verilog file created: subtractor.v
code generation for mkDifference starts
Error: "EResources.bs", line 43, column 13: (G0002)
  `m.minus' needs more than 1 ports for the following uses:
      `m.minus x__h582 x__h585' at "EResources.bs", line 43, column 13
      `m.minus x__h585 x__h582' at "EResources.bs", line 43, column 13
